--- a/views/add.ejs
+++ b/views/add.ejs
@@ -9,15 +9,21 @@
 <h1><%= title %></h1>
 
 
-<form id=“xForm" method="post" action="/add">
-    <label for='firstname'>First name:</label>
-    <input type="text" name="firstname" id="firstname" value="Mickey">
-    <p><label for='lastname'>Last name:</label>
-        <input type="text" name="lastname" id="lastname" value="Mouse">
+<form id="xForm" method="post" action="/add">
+    <label for='descritpion'>Description:</label>
+    <input type="text" name="descritpion" id="descritpion" value="Enter descritpion here">
+    <p><label for='username'>Your username:</label>
+        <input type="text" name="username" id="username" value="Your username">
     </p>
-    <p><label for='year'>Year of Birth:</label>
-        <input type="number" name="year" id="year" value="1900">
+    <p><label for='last_seen'>Last seen:</label>
+        <input type="date" name="last_seen" id="last_seen">
     </p>
+
+
+    <p><label for='location'>Location:</label>
+        <input type="text" name="location" id="location">
+    </p>
+
     <p><input type="submit" name="g" value="Submit" id="g"></p>
 </form>
 <div id="results" style="margin-top:30px"></div>
