--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
 
 <ul>
 
-    <% for(var i=0; i<data.length; i++) {%>
+    <% for(let i=0; i<data.length; i++) {%>
         <li>
             <span><%= data[i].first_name %></span>
             <span><%= data[i].family_name %></span>
