--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,9 @@ body {
 a {
   color: #00B7FF;
 }
+/* Set the size of the div element that contains the map */
+#map {
+  height: 400px;
+  width: 50%;
+}
+
