--- a/views/add.ejs
+++ b/views/add.ejs
@@ -3,29 +3,33 @@
 <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
 <h1><%= title %></h1>
-
-
+<p>Click on the map to add markers.</p>
+<div id="map"></div>
 <form id="xForm" method="post" action="/add">
-    <label for='descritpion'>Description:</label>
-    <input type="text" name="descritpion" id="descritpion" value="Enter descritpion here">
+    <p><label for="identification">Identification:</label>
+        <input type="text" name="identification" id="identification" placeholder="Input identification">
+    </p>
+    <p><label for='description'>Description:</label>
+        <input type="text" name="description" id="description" placeholder="Enter description here">
+    </p>
     <p><label for='username'>Your username:</label>
-        <input type="text" name="username" id="username" value="Your username">
+        <input type="text" name="username" id="username" placeholder="Your username">
     </p>
     <p><label for='last_seen'>Last seen:</label>
-        <input type="date" name="last_seen" id="last_seen">
+        <input type="datetime-local" name="last_seen" id="last_seen">
     </p>
-
-
-    <p><label for='location'>Location:</label>
-        <input type="text" name="location" id="location">
-    </p>
+    <input type="hidden" name="lng" id="lng" required>
+    <input type="hidden" name="lat" id="lat" required>
 
     <p><input type="submit" name="g" value="Submit" id="g"></p>
 </form>
-<div id="results" style="margin-top:30px"></div>
+
+
+<script src="/javascripts/add.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe2fdRMMdIhlmYYFXEup7lXGOV8lzm6qk&callback=initMap&v=weekly" defer></script>
 </body>
 </html>
