--- a/views/add.ejs
+++ b/views/add.ejs
@@ -9,18 +9,27 @@
 <h1><%= title %></h1>
 <p>Click on the map to add a marker.</p>
 <div id="map"></div>
-<form id="xForm" method="post" action="/add">
-    <p><label for="identification">Identification:</label>
+
+<form id="xForm" method="post" action="/add" enctype="multipart/form-data">
+    <p>
+        <label for="identification">Identification:</label>
         <input type="text" name="identification" id="identification" placeholder="Input identification">
     </p>
-    <p><label for='description'>Description:</label>
+    <p>
+        <label for='description'>Description:</label>
         <input type="text" name="description" id="description" placeholder="Enter description here">
     </p>
-    <p><label for='username'>Your username:</label>
+    <p>
+        <label for='username'>Your username:</label>
         <input type="text" name="username" id="username" placeholder="Your username">
     </p>
-    <p><label for='last_seen'>Last seen:</label>
+    <p>
+        <label for='last_seen'>Last seen:</label>
         <input type="datetime-local" name="last_seen" id="last_seen">
+    </p>
+    <p>
+        <label for="myImage">Choose an image: </label>
+        <input type="file" id="myImage" name="myImg" accept="image/*" required>
     </p>
     <input type="hidden" name="location" id="location">
 
