--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,33 +2,63 @@
 <html>
 <head>
     <title><%= title %></title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 
 </head>
 <body>
-<h1><%= title %></h1>
 
-<ul>
+    <nav class="navbar navbar-default" id = "ournav">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" id="logo" href="#"><%= title %></a>
+          </div>
+          <ul class="nav navbar-nav" >
+            <li id="active"><a href="#">Recent</a></li>
+            <li id = "tab"><a href="#">Nearby</a></li>
+          </ul>
+          <span class = "navbar-text navbar-right">Hello Nickname</span>
+        </div>
+        
+      </nav>
 
+<table class="table">
+    <thead >
+        <tr>
+          <th scope="col">Date/Time</th>
+          <th scope="col">Identication</th>
+          <th scope="col">User</th>
+          <th scope="col">Image</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        
     <% for(let i=0; i<data.length; i++) {%>
-        <li>
+        <tr>
 <!--            <span><%= data[i].description%></span>-->
             <% let datetime = new Date(data[i].last_seen) %>
             <% let date = datetime.toLocaleDateString('default', { day:"2-digit",month: 'long',year:"numeric" }) %>
             <% let time = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
-            <span><%=`${date} ${time}`%></span>
-            <span><%=data[i].identification%></span>
-            <span><%= data[i].username %></span>
-            <span><img src="<%= data[i].img %>" width="100" height="100"></span>
+            <th scope= "row" id = "head"><%=`${date} ${time}`%></th>
+            <td><%=data[i].identification%></td>
+            <td><%= data[i].username %></td>
+            <td><img src="<%= data[i].img %>" width="100" height="100"></td>
+            <td><button type="button">View</button></td>
             
             
-            <span></span>
+            
             <!-- <span><%=// data[i].location.coordinates[0] %></span>  <- shows longitude -->
 <!--            <span><%= //data[i].location.coordinates[1] %></span> <- shows latitude-->
-        </li>
+        </tr>
     <% } %>
-</ul>
+</table>
+
+
+
 
 
 
