--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,6 @@
         
     <% for(let i=0; i<data.length; i++) {%>
         <tr>
-<!--            <span><%= data[i].description%></span>-->
             <% let datetime = new Date(data[i].last_seen) %>
             <% let date = datetime.toLocaleDateString('default', { day:"2-digit",month: 'long',year:"numeric" }) %>
             <% let time = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
@@ -47,10 +46,9 @@
             <td><%=data[i].identification%></td>
             <td><%= data[i].username %></td>
             <td><img src="<%= data[i].img %>" width="100" height="100"></td>
-            <td><button type="button">View</button></td>
-            
-            
-            
+            <td><button type="button">
+                    <a style="color:  white;" href = "/sightings/<%=data[i]._id%>">View</a>
+                </button></td>
             <!-- <span><%=// data[i].location.coordinates[0] %></span>  <- shows longitude -->
 <!--            <span><%= //data[i].location.coordinates[1] %></span> <- shows latitude-->
         </tr>
