--- a/views/sighting.ejs
+++ b/views/sighting.ejs
@@ -14,16 +14,33 @@
     <div>
         <div id="who_you_are" style="display: inline"></div> Chat for <%=data.username%>'s sighting: <div id="in_room" style="display: inline"></div>
     </div>
-    <div id="history" class="boxed"></div>
-    <div id="input" class="bottom boxed">
-        <form onsubmit="return false;" style="width: 100%">
-            <p>
-                <label for="name"> chat: </label>
-                <input type="text" id="chat_input" name="chat_input" style="width: 80%">
-                <button id="chat_send" onclick="sendChatText()">Send</button>
-            </p>
-        </form>
+    <br>
+    <div id="history" style="overflow-y: scroll; width: 100%; height: 400px; border: blue solid 1px;"   class="boxed">
+        <table  width="100%" id="chat_history">
+            <% for(let i=0; i<chats.length; i++) {%>
+                <tr>
+                    <% let datetime = new Date(chats[i].created_at) %>
+                    <% let date = datetime.toLocaleDateString() %>
+                    <% let time = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
+<!--                    Will change username to 'me' if username in cookie same as current username-->
+                    <td><%= chats[i].username%></td>
+                    <td style="word-break: break-all;"><%= chats[i].message%></td>
+                    <td><%= `${date} ${time}` %></td>
+                </tr>
+            <% } %>
+        </table>
+        <div id="input" class="bottom boxed">
+            <form onsubmit="return false;" style="width: 100%">
+                <p>
+                    <label for="name"> chat: </label>
+                    <input type="text" id="chat_input" name="chat_input" style="width: 80%">
+                    <button id="chat_send" onclick="sendChatText()">Send</button>
+                </p>
+            </form>
+        </div>
     </div>
+
+
 </div>
 </body>
 </html>
