--- a/views/sighting.ejs
+++ b/views/sighting.ejs
@@ -9,14 +9,14 @@
 <body onload="init()">
 <p id="roomNumber" style="display:none;"><%=data._id%></p>
 <p id="name" style="display: none"><%=`User${Math.round(Math.random() * 10000)}`%></p>
-<h1><%= data.username %></h1>
+<h1><%= title  %></h1>
 <div id="chat_interface" >
     <div>
         <div id="who_you_are" style="display: inline"></div> Chat for <%=data.username%>'s sighting: <div id="in_room" style="display: inline"></div>
     </div>
     <br>
-    <div id="history" style="overflow-y: scroll; width: 100%; height: 400px; border: blue solid 1px;"   class="boxed">
-        <table  width="100%" id="chat_history">
+    <div id="history" style="overflow-y: scroll; width: 100%; height: 400px; border: blue solid 1px; position: relative;"   class="boxed">
+        <table id="chat_history" style="width: 100%;">
             <% for(let i=0; i<chats.length; i++) {%>
                 <tr>
                     <% let datetime = new Date(chats[i].created_at) %>
@@ -29,7 +29,7 @@
                 </tr>
             <% } %>
         </table>
-        <div id="input" class="bottom boxed">
+        <div id="input" style=" width: 100%; position: absolute; bottom: 10px;" class="bottom boxed">
             <form onsubmit="return false;" style="width: 100%">
                 <p>
                     <label for="name"> chat: </label>
