--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,3 +67,19 @@ button{
   border: none;
   border-radius: 4px;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: #EBF2F7;
+  padding: 10px;
+}
+.grid-item {
+	font:20px "Poppins", Helvetica, Arial, sans-serif;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    color: #675352;
+
+  
+}
