--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,24 @@
+
 body {
   padding: 50px;
   font: 20px "Poppins", Helvetica, Arial, sans-serif;
+  background-color: #ebf2f7
   
+}
+
+
+
+.grid-container-one h2 {
+  font-weight: 900;
 }
 
 
 #ournav {
   background-color: #ffffff;
+}
+
+#navtext {
+  margin-right: 5%;
 }
 
 #tab {
@@ -15,7 +27,7 @@ body {
 
 
 #logo{
-  font: 50px;
+  font-size: large;
   color: #2579b6;
   font-weight: bold;
 }
@@ -26,6 +38,9 @@ body {
   font-size: 14px;
 }
 
+#section {
+  background-color: #ffffff;
+}
 
 
 a {
@@ -68,27 +83,101 @@ button{
   border-radius: 4px;
 }
 
-.grid-container {
-  display: grid;
+.grid-container-one {
+ display:grid;
   grid-template-columns: auto auto;
-  background-color: #EBF2F7;
-  padding: 10px;
+  background-color: #ffffff;
+
 }
+
 
 
 
 .grid-item {
-  padding: 20px;
-  font-size: 30px;
-  font: 20px "Poppins", Helvetica, Arial, sans-serif;
+  /* border: 1px solid rgba(0, 0, 0, 0.8);  */
+  /* padding: 5%; */
+  font:  "Poppins", Helvetica, Arial, sans-serif;
+  font-size: medium;
   color: #675352;
   text-align: center;
 }
 
+#bird_img {
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+}
+
+
+#location {
+  padding-top: 5%;
+
+}
+
+
+#desc {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
 
 .grid-item img {
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    display: block;
+  display: block;
+  width: 750px;
+  /* margin-top: 30%; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+   
 }
+
+
+
+
+#chat {
+  background-color: #D9E1D6;
+  width: 100%;
+  font:  "Poppins", Helvetica, Arial, sans-serif;
+  font-size: medium;
+  color: #675352;
+  text-align: center;
+}
+
+#chat h2 {
+  color: #ffffff;
+  background-color: #617D57;
+  padding: 1%;
+}
+
+
+#chat_interface {
+  font-size: small;
+}
+
+
+#who_you_are {
+  display: inline;
+}
+
+#history {
+  overflow-y: scroll; 
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%; 
+  height: 100%; 
+  border: blue solid 1px; 
+  position: relative;
+
+}
+
+#chat_history {
+  width: 100%;
+}
+
+form {
+  width: 100%;
+}
+
+
+#chat_input {
+  width: 80%;
+}
+
