--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
 body {
   padding: 50px;
   font: 20px "Poppins", Helvetica, Arial, sans-serif;
-
+  /*margin: 0 auto;*/
+  text-align: center;
 }
 
 #tab {
@@ -10,7 +11,7 @@ body {
 
 
 #logo{
-  font: 50px;
+  font-size: 50px;
   color: #2579b6;
   font-weight: bold;
 }
@@ -18,7 +19,7 @@ body {
 
 .navbar-text {
   color: #675352;
-  font-size: 14px;
+  font-size: 24px;
 }
 
 
@@ -30,26 +31,24 @@ body {
   color: #2579b6;
 }
 
-
-#logo{
-  font: 50px;
-  color: #2579b6;
-  font-weight: bold;
-}
-
-
-.navbar-text {
-  color: #675352;
-  font-size: 14px;
-}
-
 a {
   color: #00B7FF;
 }
 /* Set the size of the div element that contains the map */
 #map {
-  height: 400px;
-  width: 50%;
+  height: 100%;
+  width: 100%;
+  alignment: center;
+}
+
+#map-container{
+  border-style: solid;
+  border-width: thin;
+  border-color: #675352;
+  margin: auto;
+  width: 500px;
+  height: 300px;
+
 }
 
 #active {
@@ -89,11 +88,128 @@ button{
   padding: 10px;
 }
 .grid-item {
-	font:20px "Poppins", Helvetica, Arial, sans-serif;
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-    color: #675352;
-
-  
+  font: 20px "Poppins", Helvetica, Arial, sans-serif;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  color: #675352;
 }
+
+.mydiv{
+  /*border-style: solid;*/
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1%;
+  /*width: 50%;*/
+  /*margin: auto;*/
+}
+
+
+
+.col-sm-2{
+  border-style: solid;
+
+}
+
+.div-label{
+
+  /*flex: 1;*/
+  text-align: center;
+  /*margin-right: 4%;*/
+  /*margin-left: 200px;*/
+  background-color: #617d57;
+  font-size: 16px;
+  font-weight: lighter;
+  color: white;
+  width: 30%;
+
+}
+
+.div-input{
+  border-style: solid;
+  border-width: thin;
+  border-color: #617d57;
+  flex:1;
+  text-align: left;
+ /* margin-right: 200px;*/
+}
+
+#image-input{
+
+  display: flex;
+  justify-content: center;
+  margin-top: 1%;
+}
+
+#image-div {
+  display: block;
+
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+#image-label{
+  margin: auto;
+  width: 50%;
+
+  font-size: 16px;
+  text-align: center;
+  color: white;
+  background-color: #617d57;
+  padding: 1%;
+}
+
+#g {
+  background-color: #675352;
+  color: white;
+  font-size: 21px;
+  width: 172px;
+  height: 44px;
+}
+
+/*
+.form-container{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 600px; set a maximum width for the container element
+}*/
+
+.form-horizontal{
+  width: 50%;
+  margin: auto;
+  margin-top: 3%;
+}
+
+.input{
+  width: 100%;
+  text-align: center;
+  color: #617d57;
+  font-size: 17px;
+  border: none;
+}
+
+#map-instructions {
+  background-color: #675352;
+  color: white;
+  margin: auto;
+  width: 500px;
+  margin-top: 3%;
+  margin-bottom: 1%;
+  padding: 0.5%;
+}
+
+#myImage {
+  font-size: 17px;
+  color: #617d57;
+}
+
+/*
+#xForm{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}*/
+
+
+
