--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,21 +17,24 @@
             <a class="navbar-brand" id="logo" href="#"><%= title %></a>
           </div>
           <ul class="nav navbar-nav" >
-            <li id="active"><a href="#">Recent</a></li>
-            <li id = "tab"><a href="#">Nearby</a></li>
+            <li id="active"><a href="/sightings">Recent</a></li>
+            <li id = "tab"><a href="/nearby">Nearby</a></li>
           </ul>
           <% let username = `User${Math.round(Math.random() * 10000)}`%>
           <span id = "navtext" class = "navbar-text navbar-right">Hello <%=username%> </span>
         </div>
         
       </nav>
-
+    <%let sort_nearby = data[0].hasOwnProperty("dist.calculated") ;%>
 <table class="table">
     <thead >
         <tr>
           <th scope="col">Date/Time</th>
           <th scope="col">Identication</th>
           <th scope="col">User</th>
+          <% if (sort_nearby) {%>
+            <th scope="col">Distance (Km)</th>
+          <% } %>
           <th scope="col">Image</th>
           <th scope="col"></th>
         </tr>
@@ -46,6 +49,9 @@
             <th scope= "row" id = "head"><%=`${date} ${time}`%></td>
             <td><%=data[i].identification%></td>
             <td><%= data[i].username %></td>
+            <% if(sort_nearby) {%>
+                <td><%= (parseFloat(data[i].dist.calculated)/1000).toFixed(0) %> Km away</td>
+            <% } %>
             <td><img src="<%= data[i].img %>" width="100" height="100"></td>
             <td><button type="button">
                     <a style="color:  white;" href = "/sightings/<%=data[i]._id%>">View</a>
