--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,28 +34,35 @@
     <table class="table table-hover">
         <thead >
             <tr>
-              <th scope="col">Date/Time</th>
-              <th scope="col">Identication</th>
-              <th scope="col">User</th>
               <% if (sort_nearby) {%>
                 <th scope="col">Distance</th>
               <% } %>
+              <th scope="col">Date/Time</th>
+              <th scope="col">Identication</th>
+              <th scope="col">User</th>
+              
               <th scope="col">Image</th>
               <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
+          <% if (data.length == 0) {%>
+            <p> There Are Currently No Sightings.</p>
+            <% } %>
             <% for(let i=0; i<data.length; i++) {%>
+              
+
                 <tr>
                     <% let datetime = new Date(data[i].last_seen) %>
                     <% let date = datetime.toLocaleDateString('default', { day:"2-digit",month: 'long',year:"numeric" }) %>
                     <% let time = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
+                    <% if(sort_nearby) { %>
+                      <td><%= (parseFloat(data[i].dist_calculated)/1000).toFixed(0) %> Km away</td>
+                  <% } %>
                     <td id = "head"><%=`${date} ${time}`%></td>
                     <td><%=data[i].identification%></td>
                     <td><%= data[i].username %></td>
-                    <% if(sort_nearby) { %>
-                        <td><%= (parseFloat(data[i].dist_calculated)/1000).toFixed(0) %> Km away</td>
-                    <% } %>
+                   
                     <td><img src="<%= data[i].img %>" width="100" height="100"></td>
                     <td><button type="button">
                             <a style="color:  white;" href = "/sightings/<%=data[i]._id%>">View</a>
@@ -66,6 +73,7 @@
     </table>
 
 
+    <button ><a style="color:  white;" href = "/add">Add A Sighting</a></button>
 
 
 
