--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- <script src ="/public/javascripts/index.js" ></script> -->
 
@@ -68,7 +69,9 @@
                     <td><img src="<%= data[i].img %>" width="100" height="100"></td>
                     <td><button type="button">
                             <a style="color:  white;" href = "/sightings/<%=data[i]._id%>">View</a>
-                        </button></td>
+                        </button>
+                        <button ><i class="fa fa-download"></i> Download</button>
+                      </td>
                 </tr>
             <% } %>
             
@@ -83,6 +86,7 @@
       
 
     <button ><a style="color:  white;" href = "/add">Add A Sighting</a></button>
+    
 
 
 
