--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,8 +75,8 @@ a {
   border-width: thin;
   border-color: #675352;
   margin: auto;
-  width: 500px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
 
 }
 
@@ -165,8 +165,10 @@ button{
 }
 
 .grid-item img {
-  display: block;
-  width: 750px;
+  /*display: block;*/
+  /*width: 750px;*/
+  width: 400px;
+  height: 400px;
 }
 
 
