Cosmetic changes, improved readability, fix typo

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -15,7 +15,8 @@
         </div>
         <ul class="nav navbar-nav" >
             <li class = "nav-item">
-                <a  class="nav-link" href="/sightings">Back</a></li>
+                <a  class="nav-link" href="/sightings">Back</a>
+            </li>
         </ul>
         <span id = "navtext" class = "navbar-text navbar-right">Hello Nickname </span>
     </div>
