--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,92 +1,106 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title><%= title %></title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!-- <script src ="/public/javascripts/index.js" ></script> -->
+<head>
+  <title>
+    <%= title %>
+  </title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <!-- <script src ="/public/javascripts/index.js" ></script> -->
 
 
 </head>
 
 <body>
-    <nav class="navbar navbar-default" id = "ournav">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" id="logo" href="#"><%= title %></a>
-          </div>
-          <ul class="nav navbar-nav" >
-            <li id="recent">
-              <a  class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
-            </li>
-            <li id ="nearby"class = "nav-item">
-              <a  class="nav-link" href="/nearby">Nearby</a></li>
-            <li id ="add" class = "nav-item">
-              <a  class="nav-link" href="/add">Add new Sighting</a></li>
-          </ul>
-          <% let username = `User${Math.round(Math.random() * 10000)}`%>
-          <span id = "navtext" class = "navbar-text navbar-right">Hello <%=username%> </span>
-        </div>
-        
-      </nav>
-      <p id="demo"></p>
-    <% let sort_nearby = data[0].hasOwnProperty("dist_calculated") ;%>
-    <table class="table table-hover">
-        <thead >
-            <tr>
-              <% if (sort_nearby) {%>
-                <th scope="col">Distance</th>
-              <% } %>
-              <th scope="col">Date/Time</th>
-              <th scope="col">Identification</th>
-              <th scope="col">User</th>
-              
-              <th scope="col">Image</th>
-              <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-          <% if (data.length == 0) {%>
-            <p> There Are Currently No Sightings.</p>
-            <% } %>
-            <% for(let i=0; i<data.length; i++) {%>
-              
 
-                <tr>
-                    <% let datetime = new Date(data[i].last_seen) %>
-                    <% let date = datetime.toLocaleDateString('default', { day:"2-digit",month: 'long',year:"numeric" }) %>
-                    <% let time = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
-                    <% if(sort_nearby) { %>
-                      <td><%= (parseFloat(data[i].dist_calculated)/1000).toFixed(0) %> Km away</td>
-                  <% } %>
-                    <td id = "head"><%=`${date} ${time}`%></td>
-                    <td><%=data[i].identification%></td>
-                    <td><%= data[i].username %></td>
-                   
-                    <td><img src="<%= data[i].img %>" width="100" height="100"></td>
-                    <td><button type="button">
-                            <a style="color:  white;" href = "/sightings/<%=data[i]._id%>">View</a>
-                        </button></td>
-                </tr>
-            <% } %>
-        </tbody>
-    </table>
+  <nav class="navbar navbar-default" id="ournav">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" id="logo" href="#">
+          <%= title %>
+        </a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li id="recent">
+          <a class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
+        </li>
+        <li id="nearby" class="nav-item">
+          <a class="nav-link" href="/nearby">Nearby</a>
+        </li>
+        <li id="add" class="nav-item">
+          <a class="nav-link" href="/add">Add new Sighting</a>
+        </li>
+      </ul>
+      <% let username=`User${Math.round(Math.random() * 10000)}`%>
+        <span id="navtext" class="navbar-text navbar-right">Hello <%=username%> </span>
+    </div>
 
+  </nav>
+  <p id="demo"></p>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <% let sort_nearby=data[0].hasOwnProperty("dist_calculated") ;%>
+        <% if (sort_nearby) {%>
+          <th scope="col">Distance</th>
+          <% } %>
+            <th scope="col">Date/Time</th>
+            <th scope="col">Identification</th>
+            <th scope="col">User</th>
 
+            <th scope="col">Image</th>
+            <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if (data.length==0) {%>
+        <p> There Are Currently No Sightings.</p>
+      <% } %>
+      
+      <% for(let i=0; i<data.length; i++) {%>
+        <tr>
+          <% let datetime = new Date(data[i].last_seen) %>
+          <% let date = datetime.toLocaleDateString('default', { day:"2-digit",month: 'long' ,year:"numeric" }) %>
+          <% let time = datetime.toLocaleTimeString('default', {hour:"numeric",minute:"numeric"}) %>
+          <% if(sort_nearby) { %>
+            <td>
+              <%= (parseFloat(data[i].dist_calculated)/1000).toFixed(0) %> Km away
+            </td>
+          <% } %>
 
+          <td id="head">
+            <%=`${date} ${time}`%>
+          </td>
+          <td>
+            <%=data[i].identification%>
+          </td>
+          <td>
+            <%= data[i].username %>
+          </td>
 
-
-
+          <td>
+            <img src="<%= data[i].img %>" width="100" height="100">
+          </td>
+          <td>
+            <button type="button">
+              <a style="color:  white;" href="/sightings/<%=data[i]._id%>">View</a>
+            </button>
+          </td>
+        </tr>
+        <% } %>
+    </tbody>
+  </table>
 </body>
 </html>
 
 <script>
-  document.querySelector('#nearby').addEventListener('click',() => {
+  document.querySelector('#nearby').addEventListener('click', () => {
     document.querySelector('#recent').classList.remove('active');
     document.querySelector('#nearby').classList.add('active');
-    
+
   })
 
   function colorswitch() {
