--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,30 @@
 </head>
 
 <body>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button>
+  <!-- MODAL POPUP -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <!-- NAV BAR -->
   <nav class="navbar navbar-default" id="ournav">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -59,7 +82,7 @@
       <% if (data.length==0) {%>
         <p> There Are Currently No Sightings.</p>
       <% } %>
-      
+
       <% for(let i=0; i<data.length; i++) {%>
         <tr>
           <% let datetime = new Date(data[i].last_seen) %>
