--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,31 +6,34 @@
     <%= title %>
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <!-- <script src ="/public/javascripts/index.js" ></script> -->
+  
+
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="/javascripts/index.js" ></script>
 </head>
 
 <body>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="username-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Welcome</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <form>
+            <div class="form-group">
+              <label for="username_input">Username:</label>
+              <input type="text" class="form-control" id="username_input">
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="saveUsername">Save</button>
         </div>
       </div>
     </div>
@@ -44,19 +47,15 @@
           <%= title %>
         </a>
       </div>
-      <ul class="nav navbar-nav">
-        <li id="recent">
-          <a class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
-        </li>
-        <li id="nearby" class="nav-item">
-          <a class="nav-link" href="/nearby">Nearby</a>
-        </li>
-        <li id="add" class="nav-item">
-          <a class="nav-link" href="/add">Add new Sighting</a>
-        </li>
-      </ul>
-      <% let username=`User${Math.round(Math.random() * 10000)}`%>
-        <span id="navtext" class="navbar-text navbar-right">Hello <%=username%> </span>
+        <a class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
+        <a class="nav-link" href="/nearby">Nearby</a>
+        <a class="nav-link" href="/add">Add new Sighting</a>
+        <span id="navtext" class="navbar-text navbar-right">
+          <div id="username_display"></div>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#username-modal">
+            Change username
+          </button>
+        </span>
     </div>
 
   </nav>
@@ -116,17 +115,3 @@
   </table>
 </body>
 </html>
-
-<script>
-  document.querySelector('#nearby').addEventListener('click', () => {
-    document.querySelector('#recent').classList.remove('active');
-    document.querySelector('#nearby').classList.add('active');
-
-  })
-
-  function colorswitch() {
-    document.getElementById("demo").innerHTML = "Hello World";
-    document.getElementById("recent").innerHTML = element;
-    element.style.backgroundColor = "pink";
-  }
-</script>
