--- a/views/sighting.ejs
+++ b/views/sighting.ejs
@@ -13,7 +13,6 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <!--Will get users username from cookie-->
-<% let username = `User${Math.round(Math.random() * 10000)}`%>
 <body onload="init(<%= JSON.stringify(data) %>,'<%=username%>')">
     <% let datetime = new Date() %>
     <% let date_today = datetime.toLocaleDateString() %>
@@ -31,6 +30,7 @@
 
     <div class="container">
         <h1 class="text-center"> <%= data.identification %> </h1>
+        <h2><%username%></h2>
 
         <div class="row">
             <div class="col">
