--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,7 @@ a {
 /* Set the size of the div element that contains the map */
 #map {
   height: 400px;
-  width: 50%;
+  width: 100%;
 }
 
 #map-container{
@@ -91,6 +91,7 @@ thead {
 td {
   background-color: #ebf2f7;
   color: #675352;
+  text-align: left;
 }
 
 button{
