Preparing to implement map for input user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,12 +30,14 @@
                         <div class="form-group">
                             <label for="username_input">Username:</label>
                             <input type="text" class="form-control" id="username_input">
+                            <div id="map-container"><div id="map-user"></div></div>
+                            <input type="hidden" name="user_location" id="user_location">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="saveUsername">Save</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="saveUserData">Save</button>
                 </div>
             </div>
         </div>
