Location is used to sort by nearby

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,8 +64,8 @@
                 </a>
             </div>
             <a class="nav-link" href="/recent" onclick="colorswitch()">Recent</a>
-            <a class="nav-link" href="/nearby">Nearby</a>
-            <a class="nav-link" id = "mine-link" >Mine</a>
+            <a class="nav-link" id="nearby-link">Nearby</a>
+            <a class="nav-link" id="mine-link">Mine</a>
             <a class="nav-link" href="/add">Add new Sighting</a>
             <span id="navtext" class="navbar-text navbar-right">
                   <div id="username_display"></div>
